<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>EDRMpoc</groupId>
  <artifactId>EDRMpoc</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  
  <properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<aspectj.version>1.8.10</aspectj.version>
		<maven.compiler.release>16</maven.compiler.release>
	</properties>

	<build>
		<sourceDirectory>${basedir}/src</sourceDirectory>
        <testSourceDirectory>${basedir}/src/tests</testSourceDirectory>
		<plugins>
				<!--  Below plugin to run  java code-->
			<plugin>  
			   <groupId>org.codehaus.mojo</groupId>  
			   <artifactId>exec-maven-plugin</artifactId>  
			   <version>1.1.1</version>  
			   <executions>  
			    <execution>  
			     <phase>test</phase>  
			     <goals>  
			      <goal>java</goal>  
			     </goals>  
			     <configuration>  
			      <mainClass>src.main.EDRM.hybridFramework.TestBase.TestRunner</mainClass>    
			     </configuration>  
			    </execution>  
			   </executions>
			   </plugin> 
		<!-- Java file execution code ends here -->	   
			<!-- <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>  -->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
<!-- 					<systemPropertyVariables>
						<propertyName>Enterprise_R550</propertyName>
						<propertyName>${environment}</propertyName>
					</systemPropertyVariables> -->
					<suiteXmlFiles>
					<!-- <suiteXmlFile>smokeTestng35.xml</suiteXmlFile> -->
						<suiteXmlFile>testng.xml</suiteXmlFile>
					</suiteXmlFiles>
					
					<argLine>
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
				</configuration>
				 <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>

			</plugin>

<!-- 	<plugin>
		<artifactId>maven-compiler-plugin</artifactId>
		<version>3.11.0</version>
		<configuration>
        <fork>true</fork>
        <executable>C:\Program Files\Java\jdk-17\bin\javac</executable>
    </configuration>
	</plugin> -->

			<!-- <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin> -->


	<plugin>
		<artifactId>maven-compiler-plugin</artifactId>
		<version>3.7.0</version>
		<configuration>
			<source>16</source>
			<target>16</target>
			<fork>true</fork>
			<compilerArgs>
				<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
				<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
				<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
				<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
				<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
				<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
				<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
				<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
				<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
				<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
			</compilerArgs>
			<annotationProcessorPaths>
				<path>
					<groupId>org.projectlombok</groupId>
					<artifactId>lombok</artifactId>
					<version>1.18.16</version>
				</path>
			</annotationProcessorPaths>
		</configuration>
	</plugin>
		
		</plugins>


	</build>

	<dependencies>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<!-- <version>3.14.0</version> -->
			<version>4.11.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.14.3</version>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>3.17</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>3.17</version>
		</dependency>
		
		<!-- <dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>3.1.5</version>
		</dependency> -->

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>
<!-- 	<dependency>
		<groupId>com.sun.mail</groupId>
		<artifactId>javax.mail</artifactId>
		<version>1.6.2</version>
	</dependency> -->
	
<!-- 	    <dependency>
            <groupId>jakarta.mail</groupId>
            <artifactId>jakarta.mail-api</artifactId>
            <version>2.1.1</version>
        </dependency>


        https://mvnrepository.com/artifact/com.sun.mail/jakarta.mail
        <dependency>
            <groupId>org.eclipse.angus</groupId>
            <artifactId>jakarta.mail</artifactId>
            <version>1.0.0</version>
        </dependency> -->
        
        <!-- https://mvnrepository.com/artifact/javax.activation/activation -->
<dependency>
    <groupId>javax.activation</groupId>
    <artifactId>activation</artifactId>
    <version>1.1.1</version>
</dependency>
        
		

		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
	<!-- <dependency>
	    <groupId>com.aventstack</groupId>
	    <artifactId>extentreports</artifactId>
	    <version>4.0.9</version>
	</dependency> -->
	
	<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
	<dependency>
		<groupId>com.aventstack</groupId>
		<artifactId>extentreports</artifactId>
		<version>5.0.5</version>
	</dependency>
	<dependency>
		<groupId>org.apache.commons</groupId>
		<artifactId>commons-email</artifactId>
		<version>1.3.1</version>
	</dependency>
	
<!-- 	<dependency>
        <groupId>excel-testng-0.7</groupId>
        <artifactId>excel-testng-0.7</artifactId>
        <scope>system</scope>
        <version>1.0</version>
        <systemPath>${basedir}/src/main/EDRM/resources/jar/excel-testng-0.7.jar</systemPath>
	</dependency> -->
	
	<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
	<dependency>
	    <groupId>io.github.bonigarcia</groupId>
	    <artifactId>webdrivermanager</artifactId>
	    <version>3.6.2</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/log4j/log4j -->
	<dependency>
	    <groupId>log4j</groupId>
	    <artifactId>log4j</artifactId>
	    <version>1.2.17</version>
	</dependency>
	
	<dependency>    
	<groupId>com.fasterxml.jackson.dataformat</groupId>    
	<artifactId>jackson-dataformat-xml</artifactId>    
	<version>2.9.0.pr4</version>
	</dependency>
	
	<dependency>    
	<groupId>com.codoid.products</groupId>    
	<artifactId>fillo</artifactId>    
	<version>1.18</version>
	</dependency>
		
	</dependencies>
	
	  
  
</project>